--- a/templates/add_subscribe.html
+++ b/templates/add_subscribe.html
@@ -26,11 +26,11 @@
         <table align="center">
             <tr>
                 <td class="right">邮箱：</td>
-                <td><input name="mail" type="text"></td>
+                <td><input name="mail" type="text" value="{{ mail }}"></td>
             </tr>
             <tr>
                 <td class="right">商品链接：</td>
-                <td><input name="url" type="text"></td>
+                <td><input name="url" type="text" value="{{ url }}"></td>
             </tr>
             <tr>
                 <td class="right">期望价格：¥</td>
