--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h3>Hello World!</h3>
-<div><a href="observable_list/2">商品监控列表</a></div>
+<div><a href="observable_list">商品监控列表</a></div>
 <div><a href="add_subscribe">订阅商品</a></div>
 </body>
 </html>
