--- a/templates/label_list.html
+++ b/templates/label_list.html
@@ -59,7 +59,7 @@
 
             })
 
-            $("#create-subscribe").click(function () {
+            $("#create").click(function () {
                 dialog_label.dialog("open")
             });
 
